<resources>
    <string name="app_name">Timmo_Songjas</string>
    <string name="write_timgle">팀글 작성</string>
    <string name="title">제목</string>
    <string name="plz_input_title">제목을 입력해주세요.</string>
    <string name="type">유형</string>
    <string name="field">분야</string>
    <string name="hope_position">희망 포지션</string>
    <string name="introduction">소개</string>
    <string name="plz_introduce_yourself">자신을 마음껏 뽑내주세요!</string>
    <string name="add_act">활동 추가</string>
    <string name="act_term">활동 기간</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="act_content">활동 내용</string>
    <string name="input_act_content">활동 내용을 입력해주세요.</string>
    <string name="port">포트폴리오</string>
    <string name="input_port">관련 링크를 첨부해주세요.</string>
    <string name="open_or_not">공개 여부</string>
    <string name="open">공개</string>
    <string name="not_open">비공개</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="timmo">팀모</string>
    <string name="timgle">팀글</string>
    <string name="chatting">채팅</string>
    <string name="MY">MY</string>

    <string name="description_logo">LOGO</string>
    <string name="email">이메일</string>
    <string name="email_input">이메일을 입력해주세요.</string>
    <string name="pwd">비밀번호</string>
    <string name="pwd_input">비밀번호를 입력해주세요.</string>
    <string name="not_member">회원이 아니신가요?</string>
    <string name="singup">회원가입</string>
    <string name="login">로그인</string>

    <string name="slide">SLIDE</string>
    <string name="confirmNum">인증번호</string>
    <string name="confirmNum_input">인증번호를 입력하세요.</string>
    <string name="next">다음</string>
    <string name="nickname">닉네임</string>
    <string name="nickname_input">닉네임을 입력해주세요.</string>
    <string name="seoul">서울특별시</string>
    <string name="yongsan">용산구</string>
    <string name="univ_input">대학교를 입력해주세요.</string>
    <string name="major">전공</string>
    <string name="icemagicmajor">얼음마법학과</string>
    <string name="grade">학년</string>
    <string name="four">4</string>
    <string name="finish">완료</string>
    <string name="univ">대학교</string>


    <string name="name_tab1_chat">팀빌딩</string>
    <string name="name_tab2_chat">팀협업</string>
    <string name="message_input">메세지를 입력해주세요.</string>
    <string name="create_timmo">팀모 작성</string>
    <string name="n">n</string>
    <string name="collect_term">모집 기간</string>
    <string name="collect_content">모집 내용</string>
    <string name="content_hint">어떤 활동을 할 예정인지, 어떤 사람을 뽑는지를 풍부하게 표현해주세요.</string>
    <string name="collertor_timgle">모집자 팀글</string>
    <string name="team_port">팀포트폴리오</string>
    <string name="port_link">관련 링크를 첨부해주세요.</string>
    <string name="team_type">팀 성향</string>
    <string name="morning">아침형</string>
    <string name="night">저녁형</string>
    <string name="dawn">새벽형</string>
    <string name="plan">계획형</string>
    <string name="focus">몰입형</string>
    <string name="leader">리더</string>
    <string name="follower">팔로워</string>
    <string name="challenge">도전형</string>
    <string name="real">현실형</string>
    <string name="now_member">현재 팀원</string>
    <string name="title_activity_project_detail">ProjectDetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="todo">TODO</string>
    <string name="apply">지원하기</string>
    <string name="loca">위치</string>
    <string name="period">모집기간</string>
    <string name="category">유형/분야</string>
    <string name="collect">주요 모집 내용</string>
    <string name="team_member">팀원</string>
    <string name="apply_member">지원자</string>
    <string name="id">아이디</string>

    <string name="time_mess_item">오후 10:00</string>
    <string name="chat_item">챗 아이템</string>
    <string name="hope_member_position">희망 팀원 포지션</string>
    <string name="each_num_position">포지션 별 인원</string>
    <string name="position_num_hint">포지션 별 인원을 입력해주세요.</string>
    <string name="state">시/도</string>
    <string name="county">시/군/구</string>
    <string name="timmo_state">팀 활동 시/도</string>
    <string name="team_county">팀 활동 시/군/구</string>
    <string name="univ_limit">지원 대학 제한</string>
    <string name="entire">전체</string>
    <string name="same_univ">자대</string>
    <string name="profile_edit">프로필 수정</string>
    <string name="logout">로그아웃</string>
    <string name="position">희망 포지션</string>
    <string name="resume_intro">소개</string>
    <string name="career">활동 내역</string>
    <string name="portfolio">포트폴리오</string>
    <string name="user_type">개인 성향</string>
    <string name="send_message">메시지 보내기</string>
    <string name="filter">필터</string>
    <string name="personal_type">유형</string>
    <string name="plz_select_type">유형을 선택해주세요.</string>
    <string name="morning_type">아침형</string>
    <string name="night_type">저녁형</string>
    <string name="dawn_type">새벽형</string>
    <string name="plan_type">계획형</string>
    <string name="focus_type">몰입형</string>
    <string name="leader_type">리더</string>
    <string name="follow_type">팔로워</string>
    <string name="challege_type">도전파</string>
    <string name="real_type">현실파</string>
    <string name="univ_type">지원 대학 제한</string>
    <string name="no_result">검색 결과가 없습니다</string>
    <string name="signup1_email_check">인증하기</string>

</resources>