<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/cube_menu"
        android:icon="@drawable/ic_cube_24_dp"
        android:title="@string/timmo"
        />
    <item
        android:id="@+id/overlab_menu"
        android:icon="@drawable/ic_overlap_24_dp"
        android:title="@string/timgle"
        />
    <item
        android:id="@+id/chat_menu"
        android:icon="@drawable/ic_chat_24_dp"
        android:title="@string/chatting" />

<!--    채팅 임시 확인-->
    <item
        android:id="@+id/people_menu"
        android:icon="@drawable/ic_loading"
        android:title="People"/>


    <item
        android:id="@+id/profile_menu"
        android:icon="@drawable/ic_profile_24_dp"
        android:title="@string/MY"/>
</menu>