<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.sign.SignUpActivity2">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_singup2"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textColor="@color/deep_black"
            android:fontFamily="@font/noto_medium"
            android:includeFontPadding="false"
            android:text="@string/singup">
        </TextView>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_bg_progress_2"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_singup2"
        android:contentDescription="@string/slide"
        android:layout_marginRight="24dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/nickname"
        android:textColor="@color/text_grey"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_singup2"
        android:layout_marginLeft="24dp" />

    <EditText
        android:id="@+id/et_nickname_signup2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/underline"
        android:inputType="textEmailAddress"
        android:hint="@string/nickname_input"
        android:textColorHint="@color/hint_grey"
        android:textColor="@color/deep_black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tv_loca_projectfind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/state"
        android:textColor="@color/text_grey"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_nickname_signup2"
        android:layout_marginLeft="24dp" />

    <EditText
        android:id="@+id/et_city_do_signup2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/underline"
        android:hint="@string/seoul"
        android:inputType="text"
        android:textColor="@color/deep_black"
        android:textColorHint="@color/hint_grey"
        android:textSize="16sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/et_gungu_signup2"
        app:layout_constraintTop_toBottomOf="@+id/tv_loca_projectfind"
        android:layout_marginLeft="24dp" />

    <TextView
        android:id="@+id/tv_dday_projectfind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/county"
        android:textColor="@color/text_grey"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@id/et_city_do_signup2"
        app:layout_constraintTop_toBottomOf="@id/et_nickname_signup2"
        android:layout_marginLeft="16dp" />

    <EditText
        android:id="@+id/et_gungu_signup2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="@drawable/underline"
        android:hint="@string/yongsan"
        android:inputType="text"
        android:textColor="@color/deep_black"
        android:textColorHint="@color/hint_grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_city_do_signup2"
        app:layout_constraintTop_toBottomOf="@+id/tv_dday_projectfind"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="24dp" />

    <TextView
        android:id="@+id/tv_title_projectfind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/univ"
        android:textColor="@color/text_grey"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_gungu_signup2"
        android:layout_marginLeft="24dp" />

    <EditText
        android:id="@+id/et_univ_signup2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/underline"
        android:inputType="textEmailAddress"
        android:hint="@string/univ_input"
        android:textColorHint="@color/hint_grey"
        android:textColor="@color/deep_black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_projectfind"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tv_type_projectfind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/major"
        android:textColor="@color/text_grey"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_univ_signup2"
        android:layout_marginLeft="24dp" />

    <EditText
        android:id="@+id/et_major_signup2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/underline"
        android:hint="@string/icemagicmajor"
        android:inputType="text"
        android:textColor="@color/deep_black"
        android:textColorHint="@color/hint_grey"
        android:textSize="16sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dt_grade_signup2"
        app:layout_constraintTop_toBottomOf="@+id/tv_type_projectfind"
        android:layout_marginLeft="24dp" />

    <TextView
        android:id="@+id/tv_field_projectfind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/grade"
        android:textColor="@color/text_grey"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@id/et_major_signup2"
        app:layout_constraintTop_toBottomOf="@id/et_univ_signup2"
        android:layout_marginLeft="16dp" />

    <EditText
        android:id="@+id/dt_grade_signup2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="@drawable/underline"
        android:hint="@string/four"
        android:inputType="number"
        android:textColor="@color/deep_black"
        android:textColorHint="@color/hint_grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_major_signup2"
        app:layout_constraintTop_toBottomOf="@+id/tv_type_projectfind"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="24dp" />

    <Button
        android:id="@+id/btn_finish_signup2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_rec"
        android:text="@string/finish"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:backgroundTint="@color/light_orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>