<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_singup1"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textColor="@color/deep_black"
            android:fontFamily="@font/noto_medium"
            android:includeFontPadding="false"
            android:text="@string/singup">
        </TextView>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_bg_progress_1"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_singup1"
        android:contentDescription="@string/slide"
        android:layout_marginRight="24dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:background="@drawable/text_orange_rect"
        android:textColor="@color/deep_orange"
        android:layout_marginTop="60dp"
        android:layout_marginRight="24dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_singup1"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="인증하기"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/email"
        android:textColor="@color/text_grey"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_singup1"
        android:layout_marginLeft="24dp" />

    <EditText
        android:id="@+id/et_email_signup1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/underline"
        android:inputType="textEmailAddress"
        android:hint="@string/email_input"
        android:textColorHint="@color/hint_grey"
        android:textColor="@color/deep_black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tv_loca_projectfind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/confirmNum"
        android:textColor="@color/text_grey"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email_signup1"
        android:layout_marginStart="24dp" />

    <EditText
        android:id="@+id/tet_pw_signup1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/underline"
        android:inputType="number"
        android:hint="@string/confirmNum_input"
        android:textColorHint="@color/hint_grey"
        android:textColor="@color/deep_black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_loca_projectfind"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tv_dday_projectfind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/pwd"
        android:textColor="@color/text_grey"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tet_pw_signup1"
        android:layout_marginLeft="24dp" />

    <EditText
        android:id="@+id/et_pw_signup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:inputType="textPassword"
        android:background="@drawable/underline"
        android:textColor="@color/deep_black"
        android:textColorHint="@color/hint_grey"
        android:textSize="16sp"
        android:hint="@string/pwd_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dday_projectfind"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_next_signup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_rec"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:backgroundTint="@color/light_orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>