<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_group_message"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textColor="@color/deep_black"
            android:fontFamily="@font/noto_medium"
            android:includeFontPadding="false"
            android:text="@string/timgle">
        </TextView>
        <ImageView
            android:id="@+id/toolbar_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingRight="16dp"
            android:src="@drawable/ic_star_24_dp"
            android:contentDescription="@string/todo"
            android:paddingEnd="16dp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />
    </androidx.appcompat.widget.Toolbar>




    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_group_message"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/include_group_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_group_message">

    </androidx.recyclerview.widget.RecyclerView>

    <include
        android:id="@+id/include_group_message"
        layout="@layout/line_gray"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/et_groupmessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_groupmessage"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@drawable/bg_edittext_40_dp"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:paddingEnd="40dp"
        android:paddingBottom="10dp"
        android:hint="@string/message_input"
        android:textColor="@color/text_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_extra_group_message"
        tools:ignore="LabelFor"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="40dp" />

    <ImageView
        android:id="@+id/iv_extra_group_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_add_box_24_dp"
        tools:ignore="VectorDrawableCompat"
        android:contentDescription="@string/description_logo"
        android:layout_marginLeft="8dp" />

    <ImageButton
        android:id="@+id/ib_send_group_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@id/et_groupmessage"
        app:layout_constraintEnd_toEndOf="@id/et_groupmessage"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/et_groupmessage"
        app:layout_constraintTop_toTopOf="@id/et_groupmessage"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_arrow_up_24_dp"
        android:contentDescription="@string/description_logo"
        tools:ignore="VectorDrawableCompat" />


</androidx.constraintlayout.widget.ConstraintLayout>